[package]
name = "nostr-probe"
version = "0.2.0"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Command line tools for nostr"
repository = "https://github.com/mikedilger/nostr-probe"
keywords = [ "nostr" ]
license = "MIT"

[dependencies]
base64 = "0.21"
bech32 = "0.11"
clap = { version = "4.5", features = [ "derive" ] }
colorful = "0.2"
dirs = "5.0"
futures-util = "0.3"
hex = "0.4"
http = "1.1"
k256 = { version = "0.13", features = [ "schnorr", "ecdh" ] }
lazy_static = "1.4"
nostr-types = { git = "https://github.com/mikedilger/nostr-types" }
rand = "0.8"
rand_core = "0.6"
reqwest = { version = "0.11", default-features = false, features = [ "blocking", "json", "rustls-tls-webpki-roots"  ] }
rpassword = "7.2"
secp256k1 = { version = "0.29", features = [ "hashes", "global-context", "rand-std", "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = [ "connect", "handshake", "rustls-tls-webpki-roots" ] }
tungstenite = { version = "0.21", features = [ "rustls-tls-webpki-roots" ] }
zeroize = "1.5"
